--- a/FIT5032-2021S2/Views/UserRoles/CreateRole.cshtml
+++ b/FIT5032-2021S2/Views/UserRoles/CreateRole.cshtml
@@ -11,7 +11,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.ValidationSummary(false, "", new { @class = "text-danger" })
 
         <div class="form-group">
             <label class="control-label col-md-2">Role Name</label>
@@ -28,3 +28,6 @@
     </div>
 }
 
+<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>
