Week8 Map & Book

--- a/FIT5032-2021S2/Views/Manage/Index.cshtml
+++ b/FIT5032-2021S2/Views/Manage/Index.cshtml
@@ -23,6 +23,8 @@
             }
             ]
         </dd>
+        <dt>Manage Book:</dt>
+        <dd>@Html.ActionLink("Manage Booing","ViewBookedEvents","BookEvents")</dd>
         <dt>External Logins:</dt>
         <dd>
             @Model.Logins.Count [
