--- a/FIT5032-2021S2/Views/StoreEvents/Index.cshtml
+++ b/FIT5032-2021S2/Views/StoreEvents/Index.cshtml
@@ -41,6 +41,7 @@
             @Html.DisplayFor(modelItem => item.EndTime)
         </td>
         <td>
+            @Html.ActionLink("Book", "BookEvent", "BookEvents",new {storeEventId = item.Id},null) |
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
             @Html.ActionLink("Details", "Details", new { id=item.Id }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.Id })
